# agenttop

./: .dockerignore  .gitignore  BUDGET_IMPLEMENTATION.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  install.py  pyproject.toml  setup.sh
.github/workflows/: ci.yml
src/agenttop/: __init__.py  __main__.py  cli.py  config.py  db.py  formatting.py  models.py
src/agenttop/analysis/: __init__.py  engine.py  intent.py  recommend.py  workflow.py
src/agenttop/collectors/: __init__.py  base.py  claude.py  claude_features.py  codex.py  copilot.py  cursor.py  kiro.py  proxy.py
src/agenttop/tui/: __init__.py  analysis.py  app.py  dashboard.py  knowledge_graph.py  sessions.py  suggestions.py
src/agenttop/web/: demo.py  graph_builder.py  kb_refresh.py  optimizer.py  server.py
src/agenttop/web/static/: index.html
src/agenttop/web/static/css/: neon.css
src/agenttop/web/static/js/: app.js  graph.js  optimizer.js  panels.js  stats.js
tests/: test_analysis.py  test_budget.py  test_claude_collector.py  test_claude_features.py  test_cli.py  test_collector_features.py  test_collectors.py  test_cursor_collector.py  test_db.py  test_formatting.py  test_optimizer.py
