[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenttop"
version = "0.1.0"
description = "htop for AI coding agents — monitor Claude Code, Cursor, Kiro, Copilot and more"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Saksham Dutta" }]
keywords = ["ai", "coding-agents", "monitoring", "tui", "claude", "cursor", "kiro"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "textual>=0.85.0",
    "textual-plotext>=0.2",
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "litellm>=1.40",
    "tomli>=2.0; python_version < '3.11'",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "pyright>=1.1",
]

[project.scripts]
agenttop = "agenttop.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agenttop"]

# Static files are resolved via Path(__file__).parent / "static" in server.py
# force-include is only needed for non-editable installs:
# [tool.hatch.build.targets.wheel.force-include]
# "src/agenttop/web/static" = "agenttop/web/static"

[project.urls]
Homepage = "https://github.com/vicarious11/agenttop"
Repository = "https://github.com/vicarious11/agenttop"
Issues = "https://github.com/vicarious11/agenttop/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
